--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <button type="button" id="erase">Eraser</button>
       <button type="button" id="clear">Clear</button>
       <button type="button" id="rect">Rect</button>
+      <button type="button" id="circle">Circle</button>
     </div>
     <script src="index.js"></script>
   </body>
